# ascii-histogram

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  histogram_core.py  main.py  pyproject.toml
src/ascii_histogram/: __init__.py  cli.py  core.py
tests/: latency_sample.txt
