[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ascii-histogram"
version = "0.1.0"
description = "ASCII histogram generator"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.2",
    "rich>=14.3.3",
    "rich-click>=1.9.7",
]

[project.scripts]
ascii-histogram = "ascii_histogram.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ascii_histogram"]
